force-app/main/default/objects/bt_stripe__Payments_User_Override__c/fields/bt_stripe__Accepted_Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Accepted_Payment_Methods__c</fullName>
    <inlineHelpText>Set which Payment Methods a user can accept in the Blackthorn Mobile app</inlineHelpText>
    <label>Accepted Payment Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card (Reader)</fullName>
            </value>
            <value>
                <fullName>Card (Typed)</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>