force-app/main/default/objects/bt_stripe__Payments_User_Override__c/fields/bt_stripe__Default_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Default_Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Default Payment Gateway for the User</inlineHelpText>
    <label>Default Payment Gateway</label>
    <referenceTo>bt_stripe__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Payments User Overrides</relationshipLabel>
    <relationshipName>Payments_User_Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>