force-app/main/default/objects/bt_stripe__Payments_User_Override__c/fields/bt_stripe__Hide_Currency_Field__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Hide_Currency_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the Currency field will be hidden and the default Currency value will be used in the Mobile Payments app</inlineHelpText>
    <label>Hide Currency Field</label>
    <type>Checkbox</type>
</CustomField>