force-app/main/default/objects/bt_stripe__Payments_User_Override__c/fields/bt_stripe__User__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Payment overrides are applied to this User</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payments_User_Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>